--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.0-rc.0",
+    "amqplib": "^0.8.0",
     "autoprefixer": "^8.2.0",
     "axios": "^0.21.4",
     "babel-loader": "^8.0.0-beta.2",
@@ -32,6 +33,7 @@
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.1.0",
+    "kue": "^0.11.6",
     "node-sass": "^4.7.2",
     "nodemon": "^1.17.2",
     "postcss-loader": "^2.1.3",
