--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MERN-boilerplate",
+  "name": "ap-optimizer",
   "version": "1.0.0",
   "description": "MERN stack project boilerplate",
   "author": "Eugene Cheung",
@@ -30,6 +30,7 @@
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
+    "csv": "^5.5.3",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.1.0",
