--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@babel/preset-react": "^7.0.0-beta.42",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@mui/material": "^5.0.0-rc.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
     "autoprefixer": "^8.2.0",
     "axios": "^0.21.4",
     "babel-loader": "^8.0.0-beta.2",
